<resources>

    <!-- SaludAPP -->
    <string name="saludApp_name">AndroidFirst</string>
    <string name="saludApp_female">Mujer</string>
    <string name="saludApp_male">Hombre</string>
    <string name="saludApp_height">Altura</string>
    <string name="saludApp_weight">Peso</string>
    <string name="saludApp_age">Edad</string>
    <string name="saludApp_calculate">Calcular</string>
    <string name="saludApp_recalculate">Re-Calcular</string>
    <string name="saludApp_result">Resultado!</string>
    <string name="saludApp_error">Error!</string>
    <string name="saludApp_text_input_name">Escribe tu nombre</string>
    <string name="saludApp_pulsar">Pulsame</string>

    <!-- IMC App -->

    <string name="title_peso_bajo">Bajo Peso</string>
    <string name="description_peso_bajo">Estás por debajo de lo óptimo para tu peso y altura.</string>

    <string name="title_peso_normal">Normal</string>
    <string name="description_peso_normal">Estás en lo óptimo para tu peso y altura.</string>

    <string name="title_sobrepeso">Sobrepeso</string>
    <string name="description_sobrepeso">Estás por encima de lo óptimo para tu peso y altura.</string>

    <string name="title_obesidad">Obesidad</string>
    <string name="description_obesidad">Estás MUY por encima de lo óptimo para tu peso y altura.</string>

    <!-- TodoApp -->

    <string name="todo_title">Bienvenido !</string>
    <string name="todo_categories">Categorias:</string>
    <string name="todo_tasks">TAREAS:</string>

    <string name="todo_dialog_add_task">Añade la tarea:</string>

    <string name="todo_dialog_business">Negocios</string>
    <string name="todo_dialog_personal">Personal</string>
    <string name="todo_dialog_other">Otros</string>

    <string name="todo_dialog_add_task_button">Crear Tarea</string>

    <!-- SuperheroApp-->
    <string name="superhero_stat_intelligence">intelligence</string>
    <string name="superhero_stat_strength">strength</string>

    <string name="superhero_stat_speed">speed</string>

    <string name="superhero_stat_durability">durability</string>

    <string name="superhero_stat_power">ower</string>

    <string name="superhero_stat_combat">combat</string>


</resources>